# learn_cv

./: .gitignore  PROJECT_1_BASIC_PIPELINE.md  PROJECT_2_SIMD_PROCESSOR.md  PROJECT_3_NETWORK_SERVER.md  PROJECT_4_INFERENCE_PIPELINE.md  PROJECT_5_PRODUCTION_SYSTEM.md  PROJECT_6_GSTREAMER_VIDEO_PIPELINE.md  PROJECT_7_ROS2_PERCEPTION_SYSTEM.md  PROJECT_8_MULTI_CAMERA_FUSION.md  PROJECT_9_END_TO_END_VISION_PLATFORM.md  README.md
omnivision_edge/: CMakeLists.txt  README.md  ROADMAP.md  SPEC.md
omnivision_edge/include/: camera_interface.hpp  frame_buffer.hpp  network_manager.hpp  packet_protocol.hpp  processor.hpp
project1/: CMakeLists.txt  Makefile
project1/src/: main.cpp
